# Demos-Examples

./: README.md  appdemos.json  appexamples.json  apptemplates.json  resources_appdemos.qrc  resources_appexamples.qrc
appdemos/basicapp/: CMakeLists.txt  README.md  basicapp.pro  main.cpp  resources.qrc
appdemos/basicapp/android/: AndroidManifest.xml  build.gradle
appdemos/basicapp/ios/: Project-Info.plist
appdemos/basicapp/qml/: Main.qml  config.json
appdemos/bike-sharing/: BikeSharing.pro  CMakeLists.txt  main.cpp  resources_bike_sharing.qrc
appdemos/bike-sharing/android/: AndroidManifest.xml  build.gradle
appdemos/bike-sharing/ios/: Project-Info.plist
appdemos/bike-sharing/qml/: BikeSharingMain.qml  DataModel.qml  StationView.qml  config.json
appdemos/bluetooth-heartrate/: BluetoothHeartrate.pro  CMakeLists.txt  main.cpp  resources.qrc
appdemos/bluetooth-heartrate/android/: AndroidManifest.xml  build.gradle
appdemos/bluetooth-heartrate/android/res/values/: strings.xml
appdemos/bluetooth-heartrate/android/res/xml/: file_paths.xml
appdemos/bluetooth-heartrate/ios/: Launch Screen.storyboard  Project-Info.plist
appdemos/bluetooth-heartrate/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
appdemos/bluetooth-heartrate/macx/: Info.plist
appdemos/bluetooth-heartrate/qml/: Main.qml  config.json
appdemos/bluetooth-heartrate/qml/components/: BpmDisplay.qml  Heart.qml
appdemos/bluetooth-heartrate/qml/model/: ApplicationModel.qml  BleHeartMonitor.qml  HeartModel.qml
appdemos/bluetooth-heartrate/qml/pages/: DevicesModal.qml  MonitorPage.qml
appdemos/coffee-machine/: CMakeLists.txt  coffee-machine.pro  main.cpp  resources.qrc
appdemos/coffee-machine/android/: AndroidManifest.xml
appdemos/coffee-machine/ios/: Project-Info.plist
appdemos/coffee-machine/qml/: CoffeeMachineMain.qml  config.json
appdemos/component-showcase/: CMakeLists.txt  component-showcase.pro  main.cpp  resources_showcase.qrc
appdemos/component-showcase/android/: AndroidManifest.xml
appdemos/component-showcase/ios/: Project-Info.plist
appdemos/component-showcase/qml/: ShowcaseMain.qml  config.json
appdemos/cpp-backend-charts-qml/: CMakeLists.txt  Cpp-backend-charts-qml.pro  main.cpp  qmlvideofx.qrc  resources.qrc
appdemos/cpp-backend-charts-qml/android/: AndroidManifest.xml
appdemos/cpp-backend-charts-qml/ios/: Project-Info.plist
appdemos/cpp-backend-charts-qml/qml/: Main.qml  config.json
appdemos/cpp-backend-charts-qml/src/: cppdatamodel.cpp  cppdatamodel.h  filereader.cpp
appdemos/cpp-qml-integration/: CMakeLists.txt  Cpp-qml-integration.pro  README.md  main.cpp
appdemos/cpp-qml-integration/android/: AndroidManifest.xml
appdemos/cpp-qml-integration/ios/: Project-Info.plist
appdemos/cpp-qml-integration/qml/: Main.qml
appdemos/cpp-qml-integration/src/: myglobalobject.cpp  myglobalobject.h  myqmltype.cpp  myqmltype.h
appdemos/input-validation/: CMakeLists.txt  input-validation.pro  main.cpp
appdemos/input-validation/android/: AndroidManifest.xml
appdemos/input-validation/ios/: Project-Info.plist
appdemos/input-validation/qml/: Constants.qml  InputValidationMain.qml  ProfilePage.qml  SignupPage.qml  ValidatedField.qml  config.json
appdemos/map-browser-communication/: CMakeLists.txt  main.cpp  map-browser-communication.pro  resources.qrc  shell.html
appdemos/map-browser-communication/android/: AndroidManifest.xml
appdemos/map-browser-communication/ios/: Project-Info.plist
appdemos/map-browser-communication/qml/: BasicSample.qml  Main.qml  MapBoxPlugin.qml  MapMarker.qml  MapPlugin.qml  config.json
appdemos/map-features/: CMakeLists.txt  LICENSE.txt  MapFeatures.pro  main.cpp
appdemos/map-features/android/: AndroidManifest.xml
appdemos/map-features/ios/: Project-Info.plist
appdemos/map-features/qml/: MapBoxPlugin.qml  MapFeaturesMain.qml  MapFeaturesModel.qml  MapPlugin.qml  SuggestionsList.qml  config.json
appdemos/messenger/: CMakeLists.txt  Messenger.pro  main.cpp  resources_messenger.qrc
appdemos/messenger/android/: AndroidManifest.xml
appdemos/messenger/ios/: Project-Info.plist
appdemos/messenger/qml/: MessengerMain.qml  (+2 more)
appdemos/music-streaming-app/: CMakeLists.txt  main.cpp  music-streaming-app.pro  resources.qrc
appdemos/news-app/: CMakeLists.txt  main.cpp  news-app.pro
appdemos/property-cross/: CMakeLists.txt  README.md  main.cpp  property-cross.pro  resources_propertycross.qrc
appdemos/qtquick-felgo-integration/: CMakeLists.txt  README.md  main.cpp  qml.qrc  qtquick-felgo-integration.pro
appdemos/qtquick-felgo-integration/android/: AndroidManifest.xml  build.gradle
appdemos/qtquick-felgo-integration/ios/: Info.plist  Project-Info.plist
appdemos/qtquick-felgo-integration/qml/: config.json  main.qml
appdemos/qtws/: CMakeLists.txt  main.cpp  qtws.pro  resources.qrc
appdemos/shopping-list/: CMakeLists.txt  ShoppingList.pro  main.cpp  resources_shopping_list.qrc
appdemos/social-network/: CMakeLists.txt  main.cpp  resources_social_network.qrc  social-network.pro
appdemos/time-tracking/: CMakeLists.txt  TimeTracking.pro  main.cpp  resources_timetracking.qrc
appdemos/todo-list/: CMakeLists.txt  README.md  main.cpp  resources_todolist.qrc  todo-list.pro
appdemos/translation/: CMakeLists.txt  main.cpp  translation.pro
appdemos/translation/android/: AndroidManifest.xml
appdemos/translation/android/res/values/: strings.xml
appdemos/translation/i18n/: cn_CN.ts  de_AT.ts  de_DE.ts  en_EN.ts  fr_FR.ts
appdemos/translation/ios/: Project-Info.plist
appdemos/translation/qml/: TranslationExampleMain.qml  TranslationExampleSimple.qml  config.json
appdemos/translation/qml/translations/: cn_CN.qm  cn_CN.ts  de_AT.qm  de_AT.ts  de_DE.qm  de_DE.ts  en_EN.qm  en_EN.ts  fr_FR.qm  fr_FR.ts
appdemos/weather-dashboard/: CMakeLists.txt  main.cpp  weather-dashboard.pro
appdemos/workout-app/: CMakeLists.txt  main.cpp  resources.qrc  workout-app.pro
appdemos/youtube-player/: CMakeLists.txt  YouTube-Player.pro  main.cpp  resources.qrc
apptemplates/app-singlepage/: App-SinglePage.pro  CMakeLists.txt
(+533 files in other folders)
